# ROS2_Walking_Pattern_Generator

./: .gitignore  MEMO.txt  README.md  STATUS.txt  TidyUp_README.md  draft_ArmIK.py  launcherr.txt  launchlog.txt  memo.txt
Draft/: WPG_log_plot.py  sine_wave.m
DraftProgram/: LOG_ArmKinematics  a.out  draft_ArmIK.py  draft_Arm_kinematics.py  draft_FK_and_IK.py  draft_LeftLeg_IK.cpp  draft_LeftLeg_IK.py  kinematics_library_research.txt
Latency_Logs/: memo.txt
Log/: WPG_log.csv  WPG_log.txt  WPG_log_20230714.txt  WPG_log_plot.m  log.txt  log_copy.txt
Records/plot_files/: matlab_plot.asv  matlab_plot.m
TidyBox/: FK.cpp  FK.hpp  IK.cpp  IK.hpp  README.md  ToKinematics_msgs.msg  WalkingPatternGenerator.hpp  WalkingPtternGenerator.cpp  WalkingStabilizationController.cpp  WalkingStabilizationController.hpp  WebotsRobotHander.cpp  WebotsRobotHandler.hpp
biped_controller/: CMakeLists.txt  package.xml
convert_to_joint_states/: CMakeLists.txt  package.xml  plugins.xml
convert_to_joint_states/include/convert_to_joint_states/: ConvertToJointStates.hpp
convert_to_joint_states/src/: ConvertToJointStates.cpp
executor/: CMakeLists.txt  package.xml
executor/src/: multi_executor_main.cpp
foot_step_planner/: CMakeLists.txt  package.xml  plugins.xml
foot_step_planner/include/foot_step_planner/: FootStepPlanner.hpp
foot_step_planner/src/: FootStepPlanner.cpp  foot_step_planner.cpp
kinematics/: CMakeLists.txt  package.xml  plugins.xml
kinematics/include/kinematics/: FK.hpp  ForwardKinematics.hpp  IK.hpp  InverseKinematics.hpp  Jacobian.hpp  kinematics.hpp  visibility_control.h
kinematics/src/: FK.cpp  FK_client.cpp  FK_main.cpp  ForwardKinematics.cpp  IK.cpp  IK_client.cpp  IK_main.cpp  InverseKinematics.cpp  InverseKinemtaics.cpp  Jacobian.cpp  hello_world.cpp  kinematics.cpp
logger/: CMakeLists.txt  package.xml
logger/src/: robot_feedback_logger.cpp
msgs_package/: CMakeLists.txt  package.xml
msgs_package/msg/: ControlOutput.msg  Feedback.msg  JointStateRecord.msg  ToWalkingStabilizationControllerMessage.msg  WalkingPattern.msg
msgs_package/src/: hello_world.cpp
msgs_package/srv/: StabilizationControl.srv  ToKinematicsMessage.msg  ToKinematicsMessage.srv  ToRobotManager.srv  ToWalkingPatternGenerator.srv  ToWalkingStabilizationController.srv  ToWebotsRobotHandlerMessage.msg  ToWebotsRobotHandlerMessage.srv
old_kinematics/: CMakeLists.txt  package.xml
old_kinematics/include/old_kinematics/: FK.hpp  IK.hpp
old_kinematics/src/: FK.cpp  FK_main.cpp  IK.cpp  IK_main.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: param_control.yaml  param_control_constant.yaml  param_debug_mode.yaml  param_mode_switch.yaml  param_robot_description.yaml  param_times.yaml  plugin_path.yaml  robot_description_path.yaml
robot_bringup/launch/: robot_bringup_launch.py
robot_bringup/src/: ParameterServer.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: README.md
robot_logger/: CMakeLists.txt  package.xml
robot_manager/: CMakeLists.txt  package.xml
robot_manager/include/robot_manager/: robot_manager.hpp  visibility_control.h
robot_manager/include/robot_manager/control_plugin_bases/: PluginBase_ConvertIntoJointStates.hpp  PluginBase_ConvertToJointStates.hpp  PluginBase_FootStepPlanner.hpp  PluginBase_ForwardKinematics.hpp  PluginBase_InverseKinematics.hpp  PluginBase_Jacobian.hpp  PluginBase_WalkingPatternGenerator.hpp  PluginBase_WalkingStabilizationController.hpp
robot_manager/include/robot_manager/plugin_bases/: ConvertIntoJointStates_base.hpp  FootStepPlanner_base.hpp  ForwardKinematics_base.hpp  InverseKinematics_base.hpp  WalkingPatternGenerator_base.hpp  WalkingStabilizationController_base.hpp
robot_manager/src/: robot_manager.cpp  robot_manager_main.cpp
robot_messages/: CMakeLists.txt  package.xml
robot_recorder/: CMakeLists.txt  package.xml
robot_recorder/launch/: robot_recorder.launch.py  robot_recorder_launch.py
robot_recorder/src/: robot_feedback_recorder.cpp  robot_footStepPlanner_recorder.cpp  robot_jointStates_recorder.cpp  robot_walkingPatternGenerator_recorder.cpp  robot_walkingStabilizationController_recorder.cpp
robot_tools/: package.xml  setup.cfg  setup.py
robot_visualizer/: CMakeLists.txt  package.xml
test_walking_pattern_generator/: CMakeLists.txt  package.xml  plugins.xml
test_walking_pattern_generator/src/: test_walking_pattern_generator.cpp
visualizer/: CMakeLists.txt  package.xml
walking_pattern_generator/: CMakeLists.txt  old_CMakeLists.txt  package.xml  plugins.xml  walking_pattern_generator.xml
walking_pattern_generator/include/walking_pattern_generator/: LinearInvertedPendulumModel.hpp  Supervisor_pub.hpp  WalkingPatternGenerator.hpp  WebotsRobotController.hpp  test1_sub.hpp
walking_pattern_generator/launch/: robot_launch.py
walking_pattern_generator/resource/: webots_robotis_op2_description.urdf
walking_pattern_generator/src/: LinearInvertedPendulumModel.cpp  Supervisor_pub.cpp  Supervisor_pub_main.cpp  WalkingPatternGenerator.cpp  WalkingPatternGenerator_main.cpp  WebotsRobotController.cpp  old_WalkingPatternGenerator.cpp  test1_sub.cpp  test1_sub_main.cpp
walking_pattern_generator/worlds/: .webots_simple_world.wbproj  webots_simple_world.wbt
walking_stabilization_controller/: CMakeLists.txt  package.xml  plugins.xml
walking_stabilization_controller/include/walking_stabilization_controller/: WalkingStabilizationController.hpp  visibility_control.h
walking_stabilization_controller/src/: WalkingStabilizationController.cpp  WalkingStabilizationController_main.cpp  hello_world.cpp
webots_robot_handler/: CMakeLists.txt  package.xml  webots_robot_handler.xml
webots_robot_handler/include/webots_robot_handler/: WebotsRobotHandler.hpp
webots_robot_handler/launch/: robot_launch.py  start_launch.py
webots_robot_handler/resource/: robotis_op2_ros2_control.yaml  webots_robotis_op2_description.urdf
webots_robot_handler/src/: WebotsRobotHander.cpp  hello_world.cpp
webots_robot_handler/worlds/: .webots_simple_world.wbproj  webots_simple_world.wbt
(+50 files in other folders)
