<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_robot_handler</name>
  <version>0.0.0</version>
  <description>webots_ros2 plugin(C++) definition</description>
  <maintainer email="yuu5364yuu@gmail.com">Yusuke Yamasaki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>webots_ros2_driver</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
