<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_robot_handler</name>
  <version>0.0.0</version>
  <description>webots_ros2 plugin(C++) definition</description>
  <maintainer email="yuu5364yuu@gmail.com">Yusuke Yamasaki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>

  <depend>rclcpp</depend>
  <!-- <depend>msgs_package</depend> -->
  <depend>webots_ros2_driver</depend>
  <depend>kinematics</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>webots_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>builtin_interfaces</depend>
  <depend>robot_state_publisher</depend> -->
  <depend>pluginlib</depend>
  <!-- <depend>rclcpp_components</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
